--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
 </head>
 <body>
     <div class="game">
-        <div class="note">
-            note
+        <div class="chart">
         </div>
         <div class="line">
-            <div class="key">D</div>
-            <div class="key">F</div>
-            <div class="key">J</div>
-            <div class="key">K</div>
+            <div id="d" class="key">D</div>
+            <div id="f" class="key">F</div>
+            <div id="j" class="key">J</div>
+            <div id="k" class="key">K</div>
         </div>
     </div>
 </body>
